# VisCDF

./: .gitignore  CMakeLists.txt  Makefile  README.md
VCDF_FEA/doc/: FEA_NcFileSpecification.txt
VCDF_FEA/include/: FEAFrame.h  FEAPart.h  FEASimulation.h
VCDF_FEA/scripts/: abaqus2netcdf.py
VCDF_FEA/source/: FEAFrame.cpp  FEAPart.cpp  FEASimulation.cpp  test.cpp
cmake/: FindNetCDF.cmake
core/include/: AttributeCollection.h  Dimension.h  Variable.h  VcContainerBase.h  VcGroup.h
core/include/memory/: CountedPtr.h
core/include/netcdf/: NcAttributeCollection.h  NcDimension.h  NcFileReader.h  NcGroup.h  NcVariable.h  visnetcdf.h
core/source/: AttributeCollection.cpp  Dimension.cpp  NcAttributeCollection.cpp  NcFileReader.cpp  NcGroup.cpp  NcVariable.cpp  Variable.cpp  VcContainerBase.cpp  VcGroup.cpp
